test/analyze/type_check/expression_statement/missing_semicolon_error.myte
module test

fun missingSemicolonInFunction() {
  1
}

fun missingSemicolonInLoops() {
  while (true) {
    1
  }

  for (i in [1, 2]) {
    1
  }
}

fun missingSemicolonInIfStatement() {
  if (true) {
    1
  }
}

fun missingSemicolonInMatchStatement() {
  match (true) {
    | _ -> {
      1
    }
  }
}

fun main() {}